@@ -273,6 +273,284 @@ java -jar hello.jar
 
 在大型项目中，不可能手动编写 `MANIFEST.MF` 文件，再手动创建 jar 包。Java 社区提供了大量的开源构建工具，例如 Maven，可以非常方便地创建 jar 包。
 
+### class 版本
+
+在 Java 开发中，许多童鞋经常被各种版本的 JDK 搞得晕头转向，本节我们就来详细讲解 Java 程序编译后的 class 文件版本问题。
+
+我们通常说的 Java 8，Java 11，Java 17，是指 JDK 的版本，也就是 JVM 的版本，更确切地说，就是 `java.exe` 这个程序的版本：
+
+```plain
+$ java -version
+java version "25.0.1" 2025-10-21 LTS
+```
+
+而每个版本的 JVM，它能执行的 class 文件版本也不同。例如，Java 11 对应的 class 文件版本是 55，而 Java 17 对应的 class 文件版本是 61。
+
+如果用 Java 11 编译一个 Java 程序，输出的 class 文件版本默认就是 55，这个 class 既可以在 Java 11 上运行，也可以在 Java 17 上运行，因为 Java 17 支持的 class 文件版本是 61，表示“最多支持到版本 61”。
+
+如果用 Java 17 编译一个 Java 程序，输出的 class 文件版本默认就是 61，它可以在 Java 17、Java 18 上运行，但不可能在 Java 11 上运行，因为 Java 11 支持的 class 版本最多到 55。如果使用低于 Java 17 的 JVM 运行，会得到一个 `UnsupportedClassVersionError`，错误信息类似：
+
+```plain
+java.lang.UnsupportedClassVersionError: Xxx has been compiled by a more recent version of the Java Runtime...
+```
+
+只要看到 `UnsupportedClassVersionError` 就表示当前要加载的 class 文件版本超过了 JVM 的能力，必须使用更高版本的 JVM 才能运行。
+
+打个比方，用 Word 2013 保存一个 Word 文件，这个文件也可以在 Word 2016 上打开。但反过来，用 Word 2016 保存一个 Word 文件，就无法使用 Word 2013 打开。
+
+当然，用 Word 2016 也可以保存一个格式为 Word 2013 的文件，这样保存的 Word 文件就可以用低版本的 Word 2013 打开，但前提是保存时必须明确指定文件格式兼容 Word 2013。
+
+类似的，对应到 JVM 的 class 文件，我们也可以用 Java 17 编译一个 Java 程序，指定输出的 class 版本要兼容 Java 11（即 class 版本 55），这样编译生成的 class 文件就可以在 Java >=11 的环境中运行。
+
+指定编译输出有两种方式，一种是在 `javac` 命令行中用参数 `--release` 设置：
+
+```plain
+$ javac --release 11 Main.java
+```
+
+参数 `--release 11` 表示源码兼容 Java 11，编译的 class 输出版本为 Java 11 兼容，即 class 版本 55。
+
+第二种方式是用参数 `--source` 指定源码版本，用参数 `--target` 指定输出 class 版本：
+
+```plain
+$ javac --source 9 --target 11 Main.java
+```
+
+上述命令如果使用 Java 17 的 JDK 编译，它会把源码视为 Java 9 兼容版本，并输出 class 为 Java 11 兼容版本。注意 `--release` 参数和 `--source --target` 参数只能二选一，不能同时设置。
+
+然而，指定版本如果低于当前的 JDK 版本，会有一些潜在的问题。例如，我们用 Java 17 编译 `Hello.java`，参数设置 `--source 9` 和 `--target 11`：
+
+```java
+public class Hello {
+    public static void hello(String name) {
+        System.out.println("hello".indent(4));
+    }
+}
+```
+
+用低于 Java 11 的 JVM 运行 `Hello` 会得到一个 `LinkageError`，因为无法加载 `Hello.class` 文件，而用 Java 11 运行 `Hello` 会得到一个 `NoSuchMethodError`，因为 `String.indent()` 方法是从 Java 12 才添加进来的，Java 11 的 `String` 版本根本没有 `indent()` 方法。
+
+```alert type=notice title=注意
+⚠️如果使用 `--release 11` 则会在编译时检查该方法是否在 Java 11 中存在。
+```
+
+因此，如果运行时的 JVM 版本是 Java 11，则编译时也最好使用 Java 11，而不是用高版本的 JDK 编译输出低版本的 class。
+
+如果使用 `javac` 编译时不指定任何版本参数，那么相当于使用 `--release 当前版本` 编译，即源码版本和输出版本均为当前版本。
+
+在开发阶段，多个版本的 JDK 可以同时安装，当前使用的 JDK 版本可由 `JAVA_HOME` 环境变量切换。
+
+#### 源码版本
+
+在编写源代码的时候，我们通常会预设一个源码的版本。在编译的时候，如果用 `--source` 或 `--release` 指定源码版本，则使用指定的源码版本检查语法。
+
+例如，使用了 lambda 表达式的源码版本至少要为 8 才能编译，使用了 `var` 关键字的源码版本至少要为 10 才能编译，使用 `switch` 表达式的源码版本至少要为 12 才能编译，且 12 和 13 版本需要启用`--enable-preview`参数。
+
+### 模块
+
+从 Java 9 开始，JDK 又引入了模块（Module）。
+
+什么是模块？这要从 Java 9 之前的版本说起。
+
+我们知道，`.class` 文件是 JVM 看到的最小可执行文件，而一个大型程序需要编写很多 Class，并生成一堆 `.class` 文件，很不便于管理，所以，`jar` 文件就是 `class` 文件的容器。
+
+在 Java 9 之前，一个大型 Java 程序会生成自己的 jar 文件，同时引用依赖的第三方 jar 文件，而 JVM 自带的 Java 标准库，实际上也是以 jar 文件形式存放的，这个文件叫 `rt.jar`，一共有 60 多 M。
+
+如果是自己开发的程序，除了一个自己的 `app.jar` 以外，还需要一堆第三方的 jar 包，运行一个 Java 程序，一般来说，命令行写这样：
+
+```plain
+java -cp app.jar:a.jar:b.jar:c.jar com.liaoxuefeng.sample.Main
+```
+
+```alert type=warning title=注意
+JVM 自带的标准库 rt.jar 不要写到 classpath 中，写了反而会干扰 JVM 的正常运行。
+```
+
+如果漏写了某个运行时需要用到的 jar，那么在运行期极有可能抛出 `ClassNotFoundException`。
+
+所以，jar 只是用于存放 class 的容器，它并不关心 class 之间的依赖。
+
+从 Java 9 开始引入的模块，主要是为了解决"依赖"这个问题。如果 `a.jar` 必须依赖另一个 `b.jar` 才能运行，那我们应该给 `a.jar` 加点说明啥的，让程序在编译和运行的时候能自动定位到 `b.jar`，这种自带"依赖关系"的 class 容器就是模块。
+
+为了表明 Java 模块化的决心，从 Java 9 开始，原有的 Java 标准库已经由一个单一巨大的 `rt.jar` 分拆成了几十个模块，这些模块以 `.jmod` 扩展名标识，可以在 `$JAVA_HOME/jmods` 目录下找到它们：
+
+- java.base.jmod
+- java.compiler.jmod
+- java.datatransfer.jmod
+- java.desktop.jmod
+- ...
+
+这些 `.jmod` 文件每一个都是一个模块，模块名就是文件名。例如：模块 `java.base` 对应的文件就是 `java.base.jmod`。模块之间的依赖关系已经被写入到模块内的 `module-info.class` 文件了。所有的模块都直接或间接地依赖 `java.base` 模块，只有 `java.base` 模块不依赖任何模块，它可以被看作是"根模块"，好比所有的类都是从 `Object` 直接或间接继承而来。
+
+把一堆 class 封装为 jar 仅仅是一个打包的过程，而把一堆 class 封装为模块则不但需要打包，还需要写入依赖关系，并且还可以包含二进制代码（通常是 JNI 扩展）。此外，模块支持多版本，即在同一个模块中可以为不同的 JVM 提供不同的版本。
+
+#### 编写模块
+
+那么，我们应该如何编写模块呢？还是以具体的例子来说。首先，创建模块和创建 Java 项目是完全一样的，以 `oop-module` 工程为例，它的目录结构如下：
+
+```ascii
+oop-module
+├── bin
+├── build.sh
+└── src
+    ├── com
+    │   └── itranswarp
+    │       └── sample
+    │           ├── Greeting.java
+    │           └── Main.java
+    └── module-info.java
+```    
+
+其中，`bin` 目录存放编译后的 class 文件，`src` 目录存放源码，按包名的目录结构存放，仅仅在 `src` 目录下多了一个 `module-info.java` 这个文件，这就是模块的描述文件。在这个模块中，它长这样：
+
+```java
+module hello.world {
+	requires java.base; // 可不写，任何模块都会自动引入 java.base
+	requires java.xml;
+}
+```
+
+其中，`module` 是关键字，后面的 `hello.world` 是模块的名称，它的命名规范与包一致。花括号的 `requires xxx;` 表示这个模块需要引用的其他模块名。除了 `java.base` 可以被自动引入外，这里我们引入了一个 `java.xml` 的模块。
+
+当我们使用模块声明了依赖关系后，才能使用引入的模块。例如，`Main.java` 代码如下：
+
+```java
+package com.itranswarp.sample;
+
+// 必须引入 java.xml 模块后才能使用其中的类:
+import javax.xml.XMLConstants;
+
+public class Main {
+	public static void main(String[] args) {
+		Greeting g = new Greeting();
+		System.out.println(g.hello(XMLConstants.XML_NS_PREFIX));
+	}
+}
+```
+
+如果把 `requires java.xml;` 从 `module-info.java` 中去掉，编译将报错。可见，模块的重要作用就是声明依赖关系。
+
+下面，我们用 JDK 提供的命令行工具来编译并创建模块。
+
+首先，我们把工作目录切换到 `oop-module`，在当前目录下编译所有的 `.java` 文件，并存放到 `bin` 目录下，命令如下：
+
+```plain
+$ javac -d bin src/module-info.java src/com/itranswarp/sample/*.java
+```
+
+如果编译成功，现在项目结构如下：
+
+```ascii
+oop-module
+├── bin
+│   ├── com
+│   │   └── itranswarp
+│   │       └── sample
+│   │           ├── Greeting.class
+│   │           └── Main.class
+│   └── module-info.class
+└── src
+    ├── com
+    │   └── itranswarp
+    │       └── sample
+    │           ├── Greeting.java
+    │           └── Main.java
+    └── module-info.java
+```
+
+注意到 `src` 目录下的 `module-info.java` 被编译到 `bin` 目录下的 `module-info.class`。
+
+下一步，我们需要把 bin 目录下的所有 class 文件先打包成 jar，在打包的时候，注意传入 `--main-class` 参数，让这个 jar 包能自己定位 `main` 方法所在的类：
+
+```plain
+$ jar --create --file hello.jar --main-class com.itranswarp.sample.Main -C bin .
+```
+
+现在我们就在当前目录下得到了 `hello.jar` 这个 jar 包，它和普通 jar 包并无区别，可以直接使用命令 `java -jar hello.jar` 来运行它。但是我们的目标是创建模块，所以，继续使用 JDK 自带的 `jmod` 命令把一个 jar 包转换成模块：
+
+```plain
+$ jmod create --class-path hello.jar hello.jmod
+```
+
+于是，在当前目录下我们又得到了 `hello.jmod` 这个模块文件，这就是最后打包出来的传说中的模块！
+
+#### 运行模块
+
+要运行一个 jar ，我们使用 `java -jar xxx.jar` 命令。要运行一个模块，我们只需要指定模块名。试试：
+
+```plain
+$ java --module-path hello.jmod --module hello.world
+```
+
+结果是一个错误：
+
+```plain
+Error occurred during initialization of boot layer
+java.lang.module.FindException: JMOD format not supported at execution time: hello.jmod
+```
+
+原因是 `.jmod` 不能被放入 `--module-path` 中。换成 `.jar` 就没问题了：
+
+```plain
+$ java --module-path hello.jar --module hello.world
+Hello, xml!
+```
+
+那我们辛辛苦苦创建的 `hello.jmod` 有什么用？答案是我们可以用它来打包 JRE 。
+
+#### 打包 JRE
+
+前面讲了，为了支持模块化，Java 9 首先带头把自己的一个巨大无比的 `rt.jar` 拆成了几十个 `.jmod` 模块，原因就是，运行 Java 程序的时候，实际上我们用到的 JDK 模块，并没有那么多。不需要的模块，完全可以删除。
+
+过去发布一个 Java 应用程序，要运行它，必须下载一个完整的 JRE，再运行 jar 包。而完整的 JRE 块头很大，有 100 多 M。怎么给 JRE 瘦身呢？
+
+现在，JRE 自身的标准库已经分拆成了模块，只需要带上程序用到的模块，其他的模块就可以被裁剪掉。怎么裁剪 JRE 呢？并不是说把系统安装的 JRE 给删掉部分模块，而是"复制"一份 JRE，但只带上用到的模块。为此，JDK 提供了 `jlink` 命令来干这件事。命令如下：
+
+```plain
+$ jlink --module-path hello.jmod --add-modules java.base,java.xml,hello.world --output jre/
+```
+
+我们在 `--module-path` 参数指定了我们自己的模块 `hello.jmod`，然后，在 `--add-modules` 参数中指定了我们用到的 3 个模块 `java.base`、`java.xml` 和 `hello.world`，用 `,` 分隔。最后，在 `--output` 参数指定输出目录。
+
+现在，在当前目录下，我们可以找到 `jre` 目录，这是一个完整的并且带有我们自己 `hello.jmod` 模块的 JRE。试试直接运行这个 JRE：
+
+```plain
+$ jre/bin/java --module hello.world
+Hello, xml!
+```
+
+要分发我们自己的 Java 应用程序，只需要把这个 `jre` 目录打个包给对方发过去，对方直接运行上述命令即可，既不用下载安装 JDK，也不用知道如何配置我们自己的模块，极大地方便了分发和部署。
+
+#### 访问权限
+
+前面我们讲过，Java 的 class 访问权限分为 public 、protected 、private 和默认的包访问权限。引入模块后，这些访问权限的规则就要稍微做些调整。
+
+确切地说，class 的这些访问权限只在一个模块内有效，模块和模块之间，例如，a 模块要访问 b 模块的某个 class ，必要条件是 b 模块明确地导出了可以访问的包。
+
+举个例子：我们编写的模块 `hello.world` 用到了模块 `java.xml` 的一个类 `javax.xml.XMLConstants` ，我们之所以能直接使用这个类，是因为模块 `java.xml` 的 `module-info.java` 中声明了若干导出：
+
+```java
+module java.xml {
+    exports java.xml;
+    exports javax.xml.catalog;
+    exports javax.xml.datatype;
+    //...
+}
+```
+
+只有它声明的导出的包，外部代码才被允许访问。换句话说，如果外部代码想要访问我们的 `hello.world` 模块中的 `com.itranswarp.sample.Greeting` 类，我们必须将其导出：
+
+```java
+module hello.world {
+    exports com.itranswarp.sample;
+
+    requires java.base;
+    requires java.xml;
+}
+```
+
+因此，模块进一步隔离了代码的访问权限。
+
 ## Java 规范
 ### 命名规范
 
